cmake_minimum_required(VERSION 3.16.3)
project(gpio CXX)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17 -g -Wall -Wextra -O0 -pg")
set(CMAKE_VERBOSE_MAKEFILE ON)

include_directories(inc)

#all files from src directory, the file(GLOB...) allows for wildcard additions:
file(GLOB SOURCES "src/*.cpp")

add_executable(gpio ${SOURCES})

add_subdirectory(test)